Automatic Diferentiation/inversion_demo/jitfailure-dolfin_expression_f4b3ceb528dd13f8089dbf282d469724/error.log
/tmp/tmp_8cikhqy/dolfin_expression_f4b3ceb528dd13f8089dbf282d469724.cpp: In member function 'virtual void dolfin::dolfin_expression_f4b3ceb528dd13f8089dbf282d469724::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const':
/tmp/tmp_8cikhqy/dolfin_expression_f4b3ceb528dd13f8089dbf282d469724.cpp:61:23: error: 'Min' was not declared in this scope
           values[0] = Min(0.5,exp(-100*(pow(x[0]-0.35,2) +  pow(x[1]-0.7,2))));
                       ^~~
/tmp/tmp_8cikhqy/dolfin_expression_f4b3ceb528dd13f8089dbf282d469724.cpp:61:23: note: suggested alternative: 'sin'
           values[0] = Min(0.5,exp(-100*(pow(x[0]-0.35,2) +  pow(x[1]-0.7,2))));
                       ^~~
                       sin
